[gd_scene load_steps=6 format=2]

[ext_resource path="res://Script/OrthographyRepository.gd" type="Script" id=1]
[ext_resource path="res://Hierarchy Game File/Input UI File/InputUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Hierarchy Game File/Main.gd" type="Script" id=3]
[ext_resource path="res://Hierarchy Game File/Change Phrase/ChangePhraseControl.tscn" type="PackedScene" id=4]
[ext_resource path="res://Hierarchy Game File/Display Control File/DisplayControl.tscn" type="PackedScene" id=5]

[node name="Main" type="Node"]
script = ExtResource( 3 )
input_control_scene = ExtResource( 2 )
change_control_scene = ExtResource( 4 )

[node name="OrthographyRepository" type="Node" parent="."]
script = ExtResource( 1 )

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[node name="DisplayControl" parent="." instance=ExtResource( 5 )]

[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
[connection signal="ask_change_data" from="DisplayControl" to="." method="_on_DisplayControl_ask_change_data"]
[connection signal="ask_phrase_data" from="DisplayControl" to="." method="_on_DisplayControl_ask_phrase_data"]
